added css file, linked it to html, and applied it to a div object

--- a/5-29-16/test.html
+++ b/5-29-16/test.html
@@ -2,10 +2,12 @@
 <html>
 	<head>
 		<title>First html</title>
+		<link rel="stylesheet" href="test.css">
 	</head>
 	<body>
 		<div>Hello World!</div>
 		<div>How's it going</div>
+		<div class="class1">testing</div>
 	</body>
 </html>
 
