--- a/5-31-16/test.html
+++ b/5-31-16/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 	<head>
 		<title>First html</title>
 		<link rel="stylesheet" href="test.css">
@@ -9,6 +9,12 @@
 		<div>How's it going</div>
 		<div class="class1">testing</div>
 		<div class="block"></div>
+
+		<div ng-controller="myController">
+		<h1>Hello World! {{ name }}</h1>
+		</div>
+
+
 		<script type="text/javascript" src="angular.min.js"></script>
 		<script type="text/javascript" src="jquery-2.2.4.js"></script>
 		<script type="text/javascript" src="test.js"></script>
