added an ng-repeat and fixed problem with first ng-controller

--- a/5-31-16/test.html
+++ b/5-31-16/test.html
@@ -11,9 +11,14 @@
 		<div class="block"></div>
 
 		<div ng-controller="myController">
-		<h1>Hello World! {{ name }}</h1>
+			<h1>Hello World! {{ name }}</h1>
+			<!--<div ng-repeat="experience in experiences">
+				<h1>{{ experience.language }}</h1>
+				<h1>{{ experience.years }}</h1>
+				<h1>{{ experience.proficiency }}</h1>
+			</div>
+			-->
 		</div>
-
 
 		<script type="text/javascript" src="angular.min.js"></script>
 		<script type="text/javascript" src="jquery-2.2.4.js"></script>
