uncommented ng-repeat

--- a/5-31-16/test.html
+++ b/5-31-16/test.html
@@ -12,12 +12,12 @@
 
 		<div ng-controller="myController">
 			<h1>Hello World! {{ name }}</h1>
-			<!--<div ng-repeat="experience in experiences">
+			<div ng-repeat="experience in experiences">
 				<h1>{{ experience.language }}</h1>
 				<h1>{{ experience.years }}</h1>
 				<h1>{{ experience.proficiency }}</h1>
 			</div>
-			-->
+			
 		</div>
 
 		<script type="text/javascript" src="angular.min.js"></script>
